Fix notes by UX team :
- Reduce the indentation for subnav items
- Avoid scroll to overlap content and show if is not needed
 - Remove background color change to subnav items when focused. Just bolding the text

--- a/packages/cascara/src/structures/AdminStructure/AdminStructure.module.scss
+++ b/packages/cascara/src/structures/AdminStructure/AdminStructure.module.scss
@@ -91,4 +91,6 @@ $border: 1px solid rgba(0, 0, 0, 0.15);
   grid-column-start: nav;
 
   grid-column-end: nav;
+  overflow-y: visible;
+  overflow-x: hidden;
 }
