--- a/packages/cascara/src/structures/AdminStructure/components/Nav/Nav.module.scss
+++ b/packages/cascara/src/structures/AdminStructure/components/Nav/Nav.module.scss
@@ -8,25 +8,21 @@ $active-color: var(--brand-text-color, #000);
 $active-background-color: var(--brand-color, #ddd);
 
 .Nav {
-  height: 100%;
+  height: fit-content;
   background-color: #f6f6f6;
   position: relative;
   z-index: 100;
   width: 100%;
-  transition: width 200ms ease-in-out;
-  min-width: 300px;
 
   :global .label {
     overflow: hidden;
     text-overflow: ellipsis;
-    min-width: 0;
+    width: 100%;
     opacity: 0;
-    transition: opacity 200ms ease-in-out;
   }
 
   &:hover,
   &:focus {
-    width: 15rem;
     outline: none;
 
     :global .label {
@@ -35,13 +31,13 @@ $active-background-color: var(--brand-color, #ddd);
   }
 
   @include media-gt-sm {
-    width: auto;
+    width: 100%;
     transition: none;
-    background-color: initial;
+    background-color: #fff;
 
     &:hover,
     &:focus {
-      width: auto;
+      width: 100%;
     }
 
     :global .label {
@@ -57,7 +53,6 @@ $active-background-color: var(--brand-color, #ddd);
 
     font-size: 16px;
     text-align: left;
-    width: 100%;
 
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -67,7 +62,7 @@ $active-background-color: var(--brand-color, #ddd);
     border-radius: 8px;
     margin: 8px 0px;
 
-    min-width: 300px;
+    width: 98%;
     min-height: 44px;
     padding: 12px;
 
@@ -77,9 +72,6 @@ $active-background-color: var(--brand-color, #ddd);
       color: #4f4f4f;
     }
 
-    &:last-child {
-      margin-bottom: $vertical-spacing;
-    }
     &:hover {
       border: 2px solid #efefef;
       border-radius: 8px;
@@ -121,23 +113,21 @@ $active-background-color: var(--brand-color, #ddd);
 
   .NavMenu {
     background-color: #f8f8f8;
-    min-width: 300px;
+    width: 98%;
     margin-top: 0px;
     border-radius: 0px 0px 8px 8px;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
 
-    & > .NavLink:first-of-type {
-      margin-top: 0;
-    }
     & > .NavLink {
       margin-top: 0;
     }
     & .NavLink {
-      padding-left: 40px !important;
+      padding-left: 1.8em !important;
       padding-top: 8px !important;
       padding-bottom: 8px !important;
       background-color: #f8f8f8;
+
       & span {
         font-size: 16px;
         display: inline-block;
@@ -150,6 +140,9 @@ $active-background-color: var(--brand-color, #ddd);
         border: none;
         font-weight: 700;
       }
+      &:focus {
+        background-color: transparent !important;
+      }
     }
   }
 
@@ -158,7 +151,7 @@ $active-background-color: var(--brand-color, #ddd);
   }
 
   .NavLink {
-    min-width: 300px;
+    width: 98%;
     min-height: 44px;
     padding: 12px;
     border-radius: 0.5em;
@@ -195,6 +188,9 @@ $active-background-color: var(--brand-color, #ddd);
       border-radius: 8px;
       font-weight: 700;
       color: #4f4f4f;
+      & span {
+        font-weight: 700;
+      }
     }
 
     &:global.active {
